SOF-140 Reduce text font size with 1px - reduced font-size, buttons align fixed

--- a/sites/all/themes/sof_theme/css/responsive.smalltouch.landscape.css
+++ b/sites/all/themes/sof_theme/css/responsive.smalltouch.landscape.css
@@ -496,6 +496,20 @@ ul.pager li{
 #user-login .form-actions{
 	width:100%;
 }
+.node-webform .form-actions input{
+	padding:15px;
+	margin-left:10px;
+}
+.node-webform .form-item label{
+	margin-right:0px;
+	padding-right:0px;
+}
+.node-webform .form-number{
+	max-width:100%;
+}
+.node-webform .webform-container-inline .form-item{
+	margin-right:5px;
+}
 /* =============================================================================
  *   Footer
  * ========================================================================== */
